[package]
name = "session-types-base"
version = "0.3.0"
authors = [ "Alexey Voznyuk <me@swizard.info>"
          , "Philip Munksgaard <pmunksgaard@gmail.com>"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          ]

description = "An implementation of generic session types in Rust"
repository = "https://github.com/swizard0/session-types-base"
readme = "README.md"
keywords = ["session", "types", "channels", "concurrency", "communication"]

license = "MIT"

[dev-dependencies]
rand = "*"

[features]
default = []
chan_select = ["compiletest_rs"]

[dependencies]
compiletest_rs = { version = "*", optional = true }
