[package]
name = "session-types-ng"
version = "0.3.3"
authors = [ "Alexey Voznyuk <me@swizard.info>"
          , "Philip Munksgaard <pmunksgaard@gmail.com>"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          ]

description = "An implementation of generic session types in Rust (next generation)"
repository = "https://github.com/swizard0/session-types-ng"
readme = "README.md"
keywords = ["session", "types", "channels", "concurrency", "communication"]

license = "MIT"

[dev-dependencies]
rand = "*"

[features]
default = []
chan_select = ["compiletest_rs"]

[dependencies]
compiletest_rs = { version = "*", optional = true }
